# pdf-signing

./: .gitignore  README.md  pyproject.toml  sign.py
