[tool.poetry]
name = "pdf-signing"
version = "0.1.0"
description = ""
authors = ["Kevin Bradwick <kevinbradwick@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pyhanko = {extras = ["image-support", "opentype", "pkcs11", "xmp"], version = "^0.20.1"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
